# pi_wars

./: .gitignore  .gitmodules  LICENSE.md  Pipfile  README.md  controller.py  drive_from_vector.py  eJoyTest.py  motorInterfaceTest.py  piwars base.cdr  setup.cfg
designs/: GrabberBase.stl  LineFollowingHolder.stl  LuxSensor.stl  Scoop2.0.stl  ScoopConnector.stl  basePlate3.ipt  base_plate3.dxf  baseplate.cdr  baseplate.dxf  camera_arm.ipt  camera_arm.stl  camera_plate.ipt  camera_plate.stl  camera_plate2.ipt  camera_plate2.stl  claw.ipt  clawstack.ipt  column1.ipt  column1.stl  column2.ipt  column2.stl  column_if1.ipt  column_if1.stl  column_if2.ipt  column_if2.stl  if_case_bottom.ipt  if_case_bottom.stl  if_case_top.ipt  if_case_top.stl  topPlate1.ipt  top_plate1.dxf
examples/: calibration.py  drive_until_red.py  lf_i2c_reader.py  line_follow.py  line_follow_new.py  luxtest.py  motorInterfaceTest.py  self_drive.py
pi_wars/: drive_to_colour.py  ps4_controller.py
pi_wars/utils/: controller.py  motor_group.py  networking.py
src/: architecture.org
src/pi_wars/: __init__.py  controller.py  drive_from_vector.py  drive_to_colour.py  lux_sensor.py  main.py  motor_group.py  networking.py  ps4_controller.py  robot.py  sam_drive_from_vector.py  server.py
src/pi_wars/modes/: __init__.py  ps4_controller.py
src/video_system/: CMakeLists.txt  Framerate.cpp  StandaloneTest.cpp  VideoPipeline.cpp  bindings.cpp  setup.py
src/yrl029_ir_line/: i2c.cpp  i2c.h  yrl029_ir_line.ino
video_system/: CMakeLists.txt  Framerate.hpp  VideoPipeline.cpp
website/: index.html
